# fastapi_ecommerce_demo

./: .env  pyproject.toml
app/: main.py
app/api/routes/: auth.py  cart.py  orders.py  products.py
app/core/: database.py
app/models/: product.py  user.py
app/services/: auth_service.py  cache_service.py  dependencies.py
app/tasks/: email_tasks.py
migrations/: README  env.py
migrations/versions/: 8b97f31360ef_initial_migration.py
